--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: clojure
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq gnugo
-script: lein midje
+script: "lein midje"
