--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: clojure
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq gnugo
+ - export PATH=$PATH:/usr/games
 script: "lein midje"
